fix: set image size to avoid flickering

--- a/src/app/home/intro/intro.component.scss
+++ b/src/app/home/intro/intro.component.scss
@@ -1,6 +1,6 @@
 .intro {
-  .unsplash {
-    width: 700px;
+  img {
+    height: auto;
   }
   &.container {
     @media screen and (max-width: 1190px) {
